--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/addons/p5.sound.min.js"></script>
   <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -25,10 +25,12 @@
   <div class="velocidad">
     <img src="PlushieDJ.webp" class="imagen_de_velocidad"><br>
     <h1 id="texto_de_velocidad">velocidad</h1>
+    <h1 id="velocidad"></h1>
   </div>
   <div class="volumen">
     <img src="PlushieDJ.webp" class="imagen_de_velocidad"><br>
     <h1 id="texto_de_volumen">volumen</h1>
+    <h1 id="volumen"></h1>
   </div>
   <button onclick="reproducir()" id="boton1">reproducir musica</button>
   <button onclick="reproducir2()" id="boton2">reproducir 2 musica</button>
